gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20569.d
version https://git-lfs.github.com/spec/v1
oid sha256:73ab96e52745662fadf00a179d9464b7348e6d239b6e6710075925ca5fe8ae49
size 544
